[package]
name = "simple_rust_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
actix-web = { version = "4.2.1", features = ["rustls"] }
actix-rt = "2.7.0"
actix-cors = "0.6.4"
openssl = "0.10.24"
rustls = "0.20.4"
rustls-pemfile = "1.0.0" 
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
regex = "1.7.0"
mime_guess = "2.0.4"
reqwest-streams = "0.2.5"
mimalloc = "0.1.37"
